Added oprn graph

--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BudgetnKE</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://budgetke.netlify.app/" />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:title"
+            content="Master Budgeting Skills and Unlock Financial Freedom."
+        />
+        <meta
+            property="og:description"
+            content="Empower your financial journey with personalized guidance from our expert personal finance coach."
+        />
+        <meta
+            property="og:image"
+            content="https://images.unsplash.com/photo-1659428168125-4934114140ca?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://budgetke.netlify.app/" />
+        <meta
+            name="twitter:title"
+            content="Master Budgeting Skills and Unlock Financial Freedom."
+        />
+        <meta
+            name="twitter:description"
+            content="Empower your financial journey with personalized guidance from our expert personal finance coach."
+        />
+        <meta
+            name="twitter:image"
+            content="https://images.unsplash.com/photo-1659428168125-4934114140ca?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+
+        <!-- Open Graph for WhatsApp -->
+        <meta
+            property="og:title"
+            content="Master Budgeting Skills and Unlock Financial Freedom."
+        />
+        <meta
+            property="og:description"
+            content="Empower your financial journey with personalized guidance from our expert personal finance coach."
+        />
+        <meta
+            property="og:image"
+            content="https://images.unsplash.com/photo-1659428168125-4934114140ca?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <meta property="og:url" content="https://budgetke.netlify.app/" />
+        <title>BudgetnKE</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
