--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         />
 
         <!-- Open Graph for WhatsApp -->
+        <!-- Open Graph for WhatsApp -->
+        <!-- Open Graph for WhatsApp -->
+
         <meta
             property="og:title"
             content="Master Budgeting Skills and Unlock Financial Freedom."
