updated meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://budgetke.netlify.app/" />
+        <meta property="og:url" content="https://budgetnke.com/" />
         <meta property="og:type" content="website" />
         <meta
             property="og:title"
@@ -22,7 +22,7 @@
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://budgetke.netlify.app/" />
+        <meta property="twitter:url" content="https://budgetnke.com/" />
         <meta
             name="twitter:title"
             content="Master Budgeting Skills and Unlock Financial Freedom."
@@ -50,7 +50,7 @@
             property="og:image"
             content="https://images.unsplash.com/photo-1664575602276-acd073f104c1?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         />
-        <meta property="og:url" content="https://budgetke.netlify.app/" />
+        <meta property="og:url" content="https://budgetnke.com/" />
         <title>BudgetnKE</title>
     </head>
     <body>
