--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://budgetnke.com/" />
